--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <title>Frontend Mentor | Recipe finder website</title>
 
   <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="dsk-about.css">
+  <link rel="stylesheet" href="about.css">
 </head>
 
 <body>
@@ -59,7 +59,6 @@
 
     </section>
 
-
     <section class="exist desktop">
       <h2>Why we exist</h2>
 
@@ -99,10 +98,125 @@
           </div>
         </div>
 
-      </div> 
-      
+      </div>
+
     </section>
 
+    <section class="food desktop">
+
+      <h2>Our food philosophy</h2>
+
+      <div class="food-mini-section">
+
+        <div class="food-info">
+
+          <div class="arrow">
+            <img src="./assets/images/icon-bullet-point.svg" alt="icon-bullet-point">
+          </div>
+
+          <div class="food-text">
+            <h3>Whole ingredients first.</h3>
+            <p>Fresh produce, grains, legumes, herbs, and quality fats form the backbone of every recipe.</p>
+          </div>
+
+        </div>
+
+        <div class="food-info">
+
+          <div class="arrow">
+            <img src="./assets/images/icon-bullet-point.svg" alt="icon-bullet-point">
+          </div>
+
+          <div class="food-text">
+            <h3>Flavor without compromise.</h3>
+            <p>Spices, citrus, and natural sweetness replace excess salt, sugar, and additives.</p>
+          </div>
+
+        </div>
+
+        <div class="food-info">
+
+          <div class="arrow">
+            <img src="./assets/images/icon-bullet-point.svg" alt="icon-bullet-point">
+          </div>
+
+          <div class="food-text">
+            <h3>Respect for time.</h3>
+            <p>Weeknight meals should slot into real schedules; weekend cooking can be leisurely but never wasteful.</p>
+          </div>
+
+        </div>
+
+        <div class="food-info">
+
+          <div class="arrow">
+            <img src="./assets/images/icon-bullet-point.svg" alt="icon-bullet-point">
+          </div>
+
+          <div class="food-text">
+            <h3>Sustainable choices.</h3>
+            <p>Short ingredient lists cut down on food waste and carbon footprint, while plant-forward dishes keep
+              things planet-friendly.</p>
+          </div>
+
+        </div>
+
+
+      </div>
+
+    </section>
+
+    <section class="plate desktop">
+
+      <div class="plate-text">
+
+        <h3>Beyond the plate</h3>
+
+        <div class="plate-info">
+          <p>We believe food is a catalyst for community and well-being. By sharing approachable recipes, we hope to:
+          </p>
+          <ul>
+            <li>Encourage family dinners and social cooking.</li>
+            <li>Reduce reliance on single-use packaging and delivery waste.</li>
+            <li>Spark curiosity about seasonal produce and local agriculture.</li>
+          </ul>
+        </div>
+
+      </div>
+
+      <div class="plate-img">
+        <img src="./assets/images/image-about-beyond-the-plate-large.webp" alt="image-about-beyond-the-plate">
+      </div>
+
+    </section>
+
+
+    <section class="ready desktop">
+
+      <div class="ready-text">
+        <h3>Ready to cook smarter?</h3>
+
+        <p>Hit the button, pick a recipe, and get dinner on the table—fast.</p>
+      </div>
+
+      <button class="btn-ready">Browse Recipes</button>
+
+      <div class="fork"><img src="./assets/images/pattern-fork.svg" alt="fork"></div>
+      <div class="knife"><img src="./assets/images/pattern-knife.svg" alt="knife"></div>
+    </section>
+
+    <section class="bottom desktop">
+
+      <span>Made with ❤️ and 🥑</span>
+
+      <div class="icons">
+
+        <a href=""><img class="social" src="./assets/images/icon-instagram.svg" alt=""></a>
+        <a href=""><img class="social" src="./assets/images/icon-bluesky.svg" alt=""></a>
+        <a href=""><img class="social" src="./assets/images/icon-tiktok.svg" alt=""></a>
+
+      </div>
+    </section>
 
   </main>
 </body>
