--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     </section>
 
-    <section class="container whatGet">
+    <section class="desktop whatGet">
       <h2>What you’ll get</h2>
       <div class="container feature">
         <div class="what-feature">
@@ -111,7 +111,7 @@
       </div>
     </section>
 
-    <section class="container realLife">
+    <section class="desktop realLife">
       <div class="realLife-text">
         <h2>Built for real life</h2>
         <p>Cooking shouldn’t be complicated. These recipes come in under <span class="decoration">30 minutes</span> of
@@ -122,7 +122,7 @@
       <div class="realLife-image"><img src="./assets/images/image-home-real-life-small.webp" alt="realLife"></div>
     </section>
 
-    <section class="container ready">
+    <section class="desktop ready">
 
       <div class="ready-text">
         <h3>Ready to cook smarter?</h3>
@@ -136,7 +136,7 @@
       <div class="knife"><img src="./assets/images/pattern-knife.svg" alt="knife"></div>
     </section>
 
-    <section class="container bottom">
+    <section class="desktop bottom">
 
       <span>Made with ❤️ and 🥑</span>
 
